# shopmind-ai

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
agents/: contracts.py  orchestrator.py
agents/executors/: amazon_executor.py  base.py  flipkart_executor.py  shopsim_executor.py
ai-shopping-avatar/: README.md
ai-shopping-avatar/agents/: critic_agent.py  decision_agent.py  preference_agent.py  price_tracker_agent.py  recommendation_agent.py
ai-shopping-avatar/core/: agent_logger.py  memory.py  recommendation_engine.py
ai-shopping-avatar/data/: products.csv
ai-shopping-avatar/memory/: agent_log.json  price_history.json  user_profile.json
ai-shopping-avatar/ui/: app.py
backend/: main.py
backend/api/: deps.py  router.py
backend/core/: config.py  logging.py  metrics.py
backend/db/: models.py  session.py
backend/schemas/: ecommerce.py  execution.py  preferences.py  recommendations.py
backend/services/: demo_benchmark.py  ecommerce.py  ecommerce_seed.py  execution_store.py  preferences.py  price_tracker.py  recommendations.py
backend/workers/: celery_app.py  tasks.py
benchmarking/: README.md  run_demo_benchmark.py
datasets/: README.md
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: phase1-architecture.md  research-gap-closure.md
evaluation/: README.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
infra/: prometheus.yml
ml/recommenders/: hnb.py  (+4 more)
scripts/: smoke_test.ps1
tests/: conftest.py  test_health.py  test_recommendations.py  test_sandbox_ecommerce.py
(+8 files in other folders)
