[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hnb-shopping-avatar"
version = "0.1.0"
description = "HNB-powered autonomous AI shopping avatar"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "sqlmodel>=0.0.22",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.7",
  "celery>=5.4.0",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "structlog>=24.2.0",
  "prometheus-client>=0.20.0",
  "python-json-logger>=2.0.7",
  "alembic>=1.13.2",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "scikit-learn>=1.5.1",
  "torch>=2.3.1",
  "matplotlib>=3.9.0",
  "mlflow>=2.14.2",
  "tenacity>=8.4.2",
  "python-dotenv>=1.0.1",
  "playwright>=1.54.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "respx>=0.21.1",
  "ruff>=0.5.5",
]

[tool.setuptools.packages.find]
include = ["backend*", "agents*", "ml*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
